--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "scripts": {
     "lint": "eslint src",
     "format": "prettier --write src",
-    "format:check": "prettier --check src"
+    "format:check": "prettier --check src",
+    "test": "jest"
+  },
+  "dependencies": {
+    "jest": "^29.7.0"
   }
 }
